# QVrc

./: .gitignore  CMakeLists.txt  create-exe.sh  qvrc.opz  translate.sh  variables.cmake
.venv-aqt/: pyvenv.cfg
engine/: CMakeLists.txt
engine/audio/plugins/: CMakeLists.txt
engine/src/: CMakeLists.txt  inputoutputmap.cpp  inputpatch.cpp  mastertimer-win32.h  outputpatch.cpp  qlcinputsource.cpp  qvrcinfo.cpp  qvrcinfo.h
file/Fixtures/: FixturesMap.xml
file/InputProfiles/: ADJ-MIDICON-2.qxi  Akai-APC40-mkII.qxi  M-Wave-SMCMixer.qxi  PMJ-Circus.qxi  PMJ-MidiKey.qxi  Worlde-Easypad.12.qxi  Worlde-OrcaPAD16.qxi
file/MidiTemplates/: APCminiMK2.qxm  Novation-LaunchPadMiniMK3.qxm
file/RGBScripts/: alternate.js  balls.js  circular.js  marquee.js  sinewave.js  starfield.js
file_4/Fixtures/: FixturesMap.xml
file_4/InputProfiles/: Akai-APC40-mkII.qxi  Akai-APCMini-mk2.qxi  Akai-APCMini.qxi  Novation-LaunchPadMiniMK3.qxi  Novation-Launchpad.qxi  PMJ-9-Faders-Controller.qxi
file_4/RGBScripts/: plasma.js  verticalfall.js
file_4/Web/: common.css  configuration.js  keypad.html  networkconfig.js  simpledesk.css  simpledesk.js  virtualconsole.css  virtualconsole.js  websocket.js
hotplugmonitor/src/: hpmprivate-win32.cpp  hpmprivate-win32.h
main/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
qmlui/: CMakeLists.txt  app.cpp  app.h  main.cpp  previewcontext.cpp  qmlui.qrc
qmlui/qml/: MainView.qml
ui/src/: CMakeLists.txt  aboutbox.cpp  aboutbox.h  aboutbox.ui  app.cpp  app.h  decryptworkspacedialog.cpp  decryptworkspacedialog.h  decryptworkspacedialog.ui  (+6 more)
(+985 files in other folders)
