project(plugins)

if((((NOT ANDROID AND NOT IOS))))
#    pkg_check_modules(MAD IMPORTED_TARGET mad)
#    if(${MAD_FOUND})
#        add_subdirectory(mad)
#    endif()

    if(WIN32)
        if(NOT SNDFILE_INCLUDE_DIRS)
            find_path(SNDFILE_INCLUDE_DIRS sndfile.h)
        endif()

        if(NOT SNDFILE_LINK_LIBRARIES)
            find_library(SNDFILE_LIBRARY NAMES sndfile libsndfile libsndfile-1)
            if(SNDFILE_LIBRARY)
                set(SNDFILE_LINK_LIBRARIES ${SNDFILE_LIBRARY})
            endif()
        endif()

        if(SNDFILE_INCLUDE_DIRS AND SNDFILE_LINK_LIBRARIES)
            add_subdirectory(sndfile)
        endif()
    else()
        pkg_check_modules(SNDFILE IMPORTED_TARGET sndfile)
        if(${SNDFILE_FOUND})
            add_subdirectory(sndfile)
        endif()
    endif()
endif()
